# space_game

client/: Cargo.toml
client/src/: game_display.rs  game_manager.rs  game_timer.rs  key_manager.rs  laser_ship.json  main.rs  plasma_ship.json  play_server.rs  render.rs
common/: Cargo.toml
common/src/: fake_server.rs  graphics.rs  lib.rs
common/src/game/: lane.rs  mod.rs  projectile.rs  ship.rs
common/src/game/ship/: base_ship.rs  mod.rs  mothership.rs  weapon.rs
common/src/game/ship/base_ship/: builder.rs  mod.rs
common/src/graphics/: composite_texture.rs  mod.rs  named_texture.rs  sprite.rs
common/src/graphics/inner/: composite_texture.rs  named_texture.rs  sprite.rs  static_texture.rs
common/src/graphics/inner/composite_texture/: mod.rs  static_texture.rs
common/src/protocol/: buf_stream.rs  mod.rs
common/tests/: create_push_tick.rs  test.rs
server/: Cargo.toml
server/src/: game_container.rs  main.rs  server.rs
server/src/game_pool/: game_container.rs  mod.rs
