[package]
name = "common"
version = "0.1.0"
authors = ["m-mueller678"]

[features]
default=[]
graphics=[]
protocol=[]

[dependencies]
serde_json = "0.9.6"
serde_derive = "0.9.7"
serde = "0.9.7"
log = "0.3.6"

[lib]
name = "common"
path = "src/lib.rs"

[[bin]]
name = "fake_server"
path = "src/fake_server.rs"
test = false
